Fix immersive focus shell spacing

--- a/src/eat.css
+++ b/src/eat.css
@@ -1331,6 +1331,7 @@ body.is-presentation-focus .stage {
 }
 
 body.is-presentation-focus .viewer-toolbar {
+  display: none;
   max-height: 0;
   margin: 0;
   padding-top: 0;
